--- a/src/Day_1/README
+++ b/src/Day_1/README
@@ -11,3 +11,5 @@ Singly linked list learning
 		->Removal of  elements  from some intermediate position
 		->Lenth of the linked list
 		->Display function for the linked list
+		->Removing all the elements 
+		->Finding a element at specfic position
